Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.

pkgcore 0.3.2:

* emake now invokes ${MAKE:-make}, instead of make- undocumented ebuild
  req, see bug 186598 at bugs.gentoo.org.

* pmerge --verbose is now pmerge --display-repo

* Stop installing pregen symlink; functionality moved to pmaint regen.

* 'pmerge --domain' was added; basically is a way to specify the domain to
  use, else usees the configuration defined default domain.


pkgcore 0.3.1:

* ticket 86; export FILE for portage_conf FETCHCOMMAND/RESUMECOMMAND support,
  convert from spawn_bash to spawn, add some extra error detection

* Correct cleanup of unknown state ebp processors; basically discard them if
  they fail in any way.  Cleanup inherit error msg when under ebd.

* Correct permission issue for vdb virtuals cache.

* ticket 84; rework overlay internals so that sorting order can't accidentally
  expose a version masked by a higher priority repository in an overlay stack.


pkgcore 0.3:

* pregen has moved into pmaint regen.

* Several example scripts that show how to use the pkgcore api have been
  added, among others:
    - repo_list (lists repos and some of their attributes)
    - changed_use (a poor man's --newuse)
    - pkg_info (show maintainers and herds of a package)
    - pclean (finds unused distfiles)

* Pkgcore now supports several different output formats for the buildplan.
  Portage and Paludis emulation are the notable formats, though plan
  category/package and the original output are also available as options.

* Portage formatter is now the default.

* Pkgcore formatter (no longer default) output was simplified to be less
  noisy.

* Large grammar fixes for documentation.

* Miscellaneous pylint cleanups, including whitespace fixes.

* Most of pkgcore.util.* (mainly the non pkgcore-specific bits) have been
  split out into a separate package, snakeoil. This includes the relevant cpy
  extensions.
