@@ -5,6 +5,11 @@ See ChangeLog for full commit logs; this is summarized/major changes.
 
 pkgcore 0.3.2:
 
+* ticket 105/96; fix via andkit, basically a bug in einstall lead to
+  extra einstall opts getting dropped instead of passed through.
+
+* compatibility fix for lha unpacking for nwere versions of lha.
+
 * emake now invokes ${MAKE:-make}, instead of make- undocumented ebuild
   req, see bug 186598 at bugs.gentoo.org.
 
